--- a/modules/themes/nordic/config/firefox/userContent.css
+++ b/modules/themes/nordic/config/firefox/userContent.css
@@ -3,7 +3,7 @@
 /* Removes white loading page */
 @-moz-document url(about:blank), url(about:newtab), url(about:home) {
     html:not(#ublock0-epicker), html:not(#ublock0-epicker) body, #newtab-customize-overlay {
-        background: var(--mff-bg) !important;
+        background: #2E3440 !important;
     }
 }
 
