--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,34 +1,35 @@
 * {
-	border: none;
-	border-radius: 0;
-	font-family: monospace;
-	font-size: 10px;
-    font-weight: bold;
-	min-height: 20px;
+    border: none;
+    border-radius: 0;
+    font-family: monospace;
+    font-size: 12px;
+    min-height: 20px;
 }
 
 window#waybar {
-	background: transparent;
+    background: transparent;
+    padding: 0;
+    margin: 0;
 }
 
 window#waybar.hidden {
-	opacity: 0.2;
+    opacity: 0.2;
 }
 
 #workspaces, #mode, #window, #mpd, #network, #pulseaudio, #temperature, #cpu, #memory, #battery, #clock {
-	margin-top: 8px;
-	margin-left: 8px;
-	padding-left: 16px;
-	padding-right: 16px;
-	margin-bottom: 0;
-	transition: none;
-	border-style: solid;
-	border-width: 2px;
+    margin-top: 4px;
+    margin-left: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-bottom: 0;
+    transition: none;
+    border-style: solid;
+    border-width: 2px;
 }
 
 #window {
     color: transparent;
-	background: transparent;
+    background: transparent;
 }
 
 window#waybar.termite #window,
@@ -36,7 +37,7 @@ window#waybar.Firefox #window,
 window#waybar.Navigator #window,
 window#waybar.PCSX2 #window {
     color: @foreground;
-	background: @bgalt;
+    background: @bgalt;
 }
 
 #workspaces, #mode, #mpd, #network, #pulseaudio, #temperature, #cpu, #memory, #battery, #clock {
@@ -46,48 +47,48 @@ window#waybar.PCSX2 #window {
 }
 
 #workspaces {
-	/* as the leftmost element, this needs extra padding */
-	margin-left: 12px;
-	padding-left: 0;
-	padding-right: 0;
-	background: @background;
-	border-color: @bgalt;
+    /* as the leftmost element, this needs extra padding */
+    margin-left: 12px;
+    padding-left: 0;
+    padding-right: 0;
+    background: @background;
+    border-color: @bgalt;
 }
 
 #workspaces button {
-	transition: none;
-	color: @foreground;
-	background: transparent;
-	font-size: 16px;
+    transition: none;
+    color: @foreground;
+    background: transparent;
+    font-size: 16px;
 }
 
 #workspaces button.focused {
-	color: @blue;
+    color: @blue;
 }
 
 #workspaces button:hover {
-	transition: none;
-	box-shadow: inherit;
-	text-shadow: inherit;
-	color: @buttonhover;
+    transition: none;
+    box-shadow: inherit;
+    text-shadow: inherit;
+    color: @buttonhover;
 }
 
 #mode {
-	background: @background;
-	border-color: @bgalt;
+    background: @background;
+    border-color: @bgalt;
 }
 
 #mpd.disconnected,
 #mpd.stopped {
-	color: @fgalt;
-	background: @background;
-	border-color: @bgalt;
+    color: @fgalt;
+    background: @background;
+    border-color: @bgalt;
 }
 
 #clock {
-	/* As the last element, this needs right padding */
-	margin-right: 12px;
-	color: @fgalt;
-	background: @background;
-	border-color: @bgalt;
+    /* As the last element, this needs right padding */
+    margin-right: 12px;
+    color: @fgalt;
+    background: @background;
+    border-color: @bgalt;
 }
