--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -9,6 +9,7 @@
 window#waybar {
     background: transparent;
     padding: 0;
+    padding-top: 4px;
     margin: 0;
 }
 
@@ -17,14 +18,10 @@ window#waybar.hidden {
 }
 
 #workspaces, #mode, #window, #mpd, #network, #pulseaudio, #temperature, #cpu, #memory, #battery, #clock {
-    margin-top: 4px;
-    margin-left: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
+    margin: 4px 3px;
+    padding: 0 8px;
     margin-bottom: 0;
     transition: none;
-    border-style: solid;
-    border-width: 2px;
 }
 
 #window {
@@ -34,22 +31,19 @@ window#waybar.hidden {
 
 #workspaces, #mode, #mpd, #network, #pulseaudio, #temperature, #cpu, #memory, #battery, #clock {
     color: @fgalt;
-    background: @background;
-    border-color: @bgalt;
 }
 
-#workspaces {
+#battery {
     /* as the leftmost element, this needs extra padding */
-    margin-left: 12px;
-    padding-left: 0;
+    padding-left: 8px;
     padding-right: 0;
-    background: @background;
-    border-color: @bgalt;
 }
 
 #workspaces button {
     transition: none;
     color: @foreground;
+    margin: 0 4px;
+    padding: 0 6px;
     background: transparent;
     font-size: 16px;
 }
@@ -65,22 +59,7 @@ window#waybar.hidden {
     color: @buttonhover;
 }
 
-#mode {
-    background: @background;
-    border-color: @bgalt;
-}
-
-#mpd.disconnected,
-#mpd.stopped {
-    color: @fgalt;
-    background: @background;
-    border-color: @bgalt;
-}
-
 #clock {
-    /* As the last element, this needs right padding */
-    margin-right: 12px;
-    color: @fgalt;
-    background: @background;
-    border-color: @bgalt;
+    /* As the last element, this needs right margin */
+    padding-right: 12px;
 }
