--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -22,6 +22,7 @@ window#waybar.hidden {
     padding: 0 8px;
     margin-bottom: 0;
     transition: none;
+    color: @fgalt;
 }
 
 #window {
@@ -29,13 +30,9 @@ window#waybar.hidden {
     background: transparent;
 }
 
-#workspaces, #mode, #mpd, #network, #pulseaudio, #temperature, #cpu, #memory, #battery, #clock {
-    color: @fgalt;
-}
-
-#battery {
+#workspaces {
     /* as the leftmost element, this needs extra padding */
-    padding-left: 8px;
+    padding-left: 0;
     padding-right: 0;
 }
 
@@ -61,5 +58,5 @@ window#waybar.hidden {
 
 #clock {
     /* As the last element, this needs right margin */
-    padding-right: 12px;
+    padding-right: 16px;
 }
